# multi-task-learning

./: .gitignore  MANIFEST.in  README.md  arjun.py  config.py  cs_nt_mt_ms_base_t5.ipynb  cs_nt_mt_ms_base_t5.py  generator.py  layers.py  loss.py  models.py  ms_base_t5.ipynb  ms_base_t5.py  mt_base_t5.ipynb  mt_base_t5.py  mt_ms_base_t5.py  nt_mt_ms_base_t5.ipynb  nt_mt_ms_base_t5.py  pyproject.toml  requirements.txt  setup.py
arjun/: __init__.py  layers.py  model.py  scheduler.py
notebooks/: finetune.ipynb  pretrain.ipynb
pretrain_data/btokenizer/: tokenizer.json
v1/: cs_nt_mt_ms_base_t5.ipynb  cs_nt_mt_ms_base_t5.py  electra-subhadip.py  electra_subhadip.ipynb  ms_base_t5.ipynb  ms_base_t5.py  mt_base_t5.ipynb  mt_base_t5.py  mt_base_t5_v4.py  mt_ms_base_t5.ipynb  mt_ms_base_t5.py  nt_mt_ms_base_t5.ipynb  nt_mt_ms_base_t5.py
v2/: mt_ms_base_t5.ipynb  run_sagemaker.ipynb
